<resources>
    <string name="app_name">CustomerManager</string>

    <!--  Fragment and view labels  -->
    <string name="main_fragment_title">Shiva Stitch Wear</string>
    <string name="dashboard_fragment_label">Customer Manager</string>
    <string name="editor_fragment_label">Add New Customer</string>
    <string name="dashboard">Dashboard</string>
    <string name="existing_customer_toolbar_title">Existing Customer</string>
    <string name="welcome_login_message">Welcome, %1$s!</string>

    <!--  Text fields hints  -->
    <string name="hint_customer_bill_text">Bill Number</string>
    <string name="helper_text_customer_bill">EX: 0001</string>
    <string name="hint_customer_name_text">Customer Name</string>
    <string name="hint_customer_contact_text">Contact</string>
    <string name="hint_customer_mail_text">Mail Address</string>
    <string name="hint_number_of_items_text">Total</string>
    <string name="hint_item_type_text">Type</string>

    <!--  Buttons  -->
    <string name="submit_text_button">Submit</string>
    <string name="validate_fields_button">Validate</string>

    <!--  Customer status  -->
    <string name="status_completed">Completed</string>
    <string name="status_pending">Pending</string>

    <!--  Tools text  -->
    <string name="date_tools_text">10/08/20</string>

    <!--  Menu item  -->
    <string name="action_clean_fields">Clear</string>

    <!--  Customer Item Type DropDownMenu  -->
    <string name="item_type_dress">Dress</string>
    <string name="item_type_blouse">Blouse</string>
    <string name="item_type_ghagra">CropTop Ghagra</string>
    <string name="item_type_lehenga">Lehenga Blouse</string>
    <string name="item_type_long_frock">LongFrock</string>

    <!--  TextInputLayout Text  -->
    <string name="field_required_error_text">Field required</string>
    <string name="invalid_mail_error_text">Invalid</string>

    <!--  Firestore Response Message  -->
    <string name="customer_firestore_unsuccessful">UnSuccessful</string>
    <string name="dialog_positive_button_ok">OK</string>
    <string name="dialog_positive_message_text">Customer added successfully</string>
    <string name="dialog_error_title_text">Error</string>

    <!--  Dialog titles and messages  -->
    <string name="dialog_error_message_text">Internet connection not available</string>
    <string name="dialog_negative_button_cancel">Cancel</string>
    <string name="dialog_positive_button_delete">Delete</string>
    <string name="dialog_message_text_delete">All customer details will be removed permanently. Delete now ?</string>
    <string name="dialog_title_search_error">Error</string>

    <!--  Error response texts  -->
    <string name="field_validation_error_message">Incorrect</string>
    <string name="customer_data_label">Customer\'s Data</string>
    <string name="search_articles_hint">Search bill number</string>

    <!--  Detail Fragment text labels  -->
    <string name="label_customer">Customer</string>
    <string name="label_contact">Contact</string>
    <string name="label_type">Type</string>
    <string name="label_status">Status</string>
    <string name="label_num_items">Total</string>

    <string name="delete_customer_menu_title">Delete</string>


    <!--  LoginFragment  -->
    <string name="welcome_label">Welcome !</string>
    <string name="login_status">
        You are currently not logged in. Please login from below to continue.
    </string>
    <string name="login">Login</string>
    <string name="user_name_tools_text">Username</string>

    <string name="detail_num_items_text_label">Total items</string>
    <string name="detail_date_started_on_label">Started On</string>
    <string name="detail_date_expected_label">Expected</string>
    <string name="skip">Skip</string>

</resources>