<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.developerbreach.customermanager.viewModel.EditorViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".view.editor.EditorFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bill_number_input"
                style="@style/Widget.CustomerManager.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/hint_customer_bill_text"
                app:helperTextEnabled="true"
                app:helperText="@string/helper_text_customer_bill"
                app:layout_constraintBottom_toTopOf="@id/item_type_input"
                app:layout_constraintEnd_toStartOf="@id/number_of_items_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_bill_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bill_number_edit_text"
                    style="@style/Widget.CustomersManager.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="4" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/number_of_items_input"
                style="@style/Widget.CustomerManager.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/hint_number_of_items_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/bill_number_input"
                app:layout_constraintTop_toBottomOf="@id/bill_number_input"
                app:layout_constraintTop_toTopOf="@id/bill_number_input"
                app:startIconDrawable="@drawable/ic_total_items">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/number_of_items_edit_text"
                    style="@style/Widget.CustomersManager.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="2" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_type_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingBottom="8dp"
                app:boxStrokeColor="@color/textInputOutlineColor"
                app:hintTextAppearance="@style/TextAppearance.CustomerManager.TextInputLayout.HintText"
                app:hintTextColor="@color/primaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/customer_name_input"
                app:layout_constraintTop_toBottomOf="@id/bill_number_input"
                app:startIconDrawable="@drawable/ic_item_type"
                app:startIconTint="@color/iconColor">

                <AutoCompleteTextView
                    android:id="@+id/item_type_drop_down"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_item_type_text"
                    android:inputType="none"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/customer_name_input"
                style="@style/Widget.CustomerManager.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/hint_customer_name_text"
                app:layout_constraintBottom_toTopOf="@id/customer_mail_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_type_input"
                app:startIconDrawable="@drawable/ic_customer_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customer_name_edit_text"
                    android:inputType="textCapSentences"
                    style="@style/Widget.CustomersManager.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/customer_mail_input"
                style="@style/Widget.CustomerManager.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/hint_customer_mail_text"
                app:layout_constraintBottom_toTopOf="@id/customer_mail_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/customer_name_input"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mail_edit_text"
                    style="@style/Widget.CustomersManager.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/customer_contact_input"
                style="@style/Widget.CustomerManager.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/hint_customer_contact_text"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:layout_constraintBottom_toTopOf="@id/pending_status"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/customer_mail_input"
                app:startIconDrawable="@drawable/ic_contact">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contact_edit_text"
                    style="@style/Widget.CustomersManager.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/pending_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/status_pending_filled"
                android:fontFamily="@font/roboto_mono"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/status_pending"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/customer_contact_input" />

            <TextView
                android:id="@+id/completed_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/status_completed_plane"
                android:fontFamily="@font/roboto_mono"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/status_completed"
                android:textColor="#000000"
                app:layout_constraintStart_toEndOf="@id/pending_status"
                app:layout_constraintTop_toTopOf="@id/pending_status" />

            <ImageView
                android:id="@+id/date_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_date"
                app:layout_constraintBottom_toBottomOf="@id/date_display_text_view"
                app:layout_constraintEnd_toStartOf="@id/date_display_text_view"
                app:layout_constraintTop_toTopOf="@id/date_display_text_view"
                tools:ignore="ContentDescription"
                app:tint="@color/iconColor" />

            <TextView
                android:id="@+id/date_display_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_mono_bold"
                android:text="@string/date_text"
                android:textColor="@color/iconColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/pending_status"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/pending_status" />

            <Button
                android:id="@+id/validate_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/iconColor"
                android:text="@string/validate_fields_button"
                android:visibility="visible"
                app:bindBillNumberEditText="@{billNumberEditText}"
                app:bindContactEditText="@{contactEditText}"
                app:bindMailEditText="@{mailEditText}"
                app:bindSubmitButton="@{submitButton}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/iconColor"
                android:text="@string/submit_text_button"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>