<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="navController"
            type="androidx.navigation.NavController" />

        <variable
            name="customer"
            type="com.developerbreach.customermanager.model.Customers" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:fitsSystemWindows="true"
        tools:context=".view.detail.DetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:elevation="0dp"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:bindNavigateUpButtonDetailFragment="@{navController}"
                app:menu="@menu/menu_edit"
                app:navigationIcon="@drawable/ic_up_button" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <ImageView
                    android:id="@+id/detail_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/item_bg"
                    android:gravity="center"
                    android:padding="20dp"
                    app:bindDetailStatusImageView="@{customer}"
                    app:layout_constraintBottom_toBottomOf="@id/detail_bill_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/detail_bill_number"
                    app:tint="@color/iconColor"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/ic_clear" />

                <TextView
                    android:id="@+id/detail_status_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/label_status"
                    app:layout_constraintBottom_toBottomOf="@id/detail_bill_number"
                    app:layout_constraintEnd_toEndOf="@id/detail_status"
                    app:layout_constraintStart_toStartOf="@id/detail_status" />

                <TextView
                    android:id="@+id/detail_bill_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/item_bg"
                    android:gravity="center"
                    android:paddingStart="20dp"
                    android:paddingTop="36dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="36dp"
                    android:text="@{customer.billNumber}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                    android:textColor="@color/iconColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="3280" />

                <TextView
                    android:id="@+id/detail_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{customer.date}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintEnd_toEndOf="@id/detail_bill_number"
                    app:layout_constraintStart_toStartOf="@id/detail_bill_number"
                    app:layout_constraintTop_toBottomOf="@id/detail_bill_number"
                    tools:text="Aug 16 2020" />

                <TextView
                    android:id="@+id/detail_num_items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/item_bg"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@{customer.totalItems}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                    android:textColor="@color/iconColor"
                    app:layout_constraintBottom_toBottomOf="@id/detail_bill_number"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/detail_bill_number"
                    tools:text="9" />

                <TextView
                    android:id="@+id/detail_num_items_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/label_num_items"
                    app:layout_constraintBottom_toBottomOf="@id/detail_bill_number"
                    app:layout_constraintEnd_toEndOf="@id/detail_num_items"
                    app:layout_constraintStart_toStartOf="@id/detail_num_items" />

                <ImageView
                    android:id="@+id/customer_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/ic_customer_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detail_date"
                    app:tint="@color/iconColor"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/detail_customer_name_tag_text_view"
                    style="@style/TextAppearance.Customer.Detail.Tag"
                    android:text="@string/label_customer"
                    app:layout_constraintBottom_toBottomOf="@id/customer_icon"
                    app:layout_constraintStart_toEndOf="@id/customer_icon"
                    app:layout_constraintTop_toTopOf="@id/customer_icon" />

                <TextView
                    android:id="@+id/detail_customer_name_text_view"
                    style="@style/TextAppearance.Customer.Detail.Value"
                    android:text="@{customer.name}"
                    app:layout_constraintStart_toStartOf="@id/detail_customer_name_tag_text_view"
                    app:layout_constraintTop_toBottomOf="@id/detail_customer_name_tag_text_view"
                    tools:text="Varalakshmi" />

                <View
                    android:id="@+id/customer_name_separator"
                    style="@style/Spacer.Customer.Detail.Horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detail_customer_name_text_view" />

                <ImageView
                    android:id="@+id/contact_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="28dp"
                    android:src="@drawable/ic_contact"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/customer_name_separator"
                    app:tint="@color/iconColor"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/detail_contact_tag_text_view"
                    style="@style/TextAppearance.Customer.Detail.Tag"
                    android:text="@string/label_contact"
                    app:layout_constraintBottom_toBottomOf="@id/contact_icon"
                    app:layout_constraintStart_toEndOf="@id/contact_icon"
                    app:layout_constraintTop_toTopOf="@id/contact_icon" />

                <TextView
                    android:id="@+id/detail_contact_text_view"
                    style="@style/TextAppearance.Customer.Detail.Value"
                    android:text="@{customer.contact}"
                    app:layout_constraintStart_toStartOf="@id/detail_contact_tag_text_view"
                    app:layout_constraintTop_toBottomOf="@id/detail_contact_tag_text_view"
                    tools:text="9290094891" />

                <View
                    android:id="@+id/type_separator"
                    style="@style/Spacer.Customer.Detail.Horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detail_contact_text_view" />

                <ImageView
                    android:id="@+id/type_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="28dp"
                    android:src="@drawable/ic_item_type"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/type_separator"
                    app:tint="@color/iconColor"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/detail_type_tag_text_view"
                    style="@style/TextAppearance.Customer.Detail.Tag"
                    android:text="@string/label_type"
                    app:layout_constraintBottom_toBottomOf="@id/type_icon"
                    app:layout_constraintStart_toEndOf="@id/type_icon"
                    app:layout_constraintTop_toTopOf="@id/type_icon" />

                <TextView
                    android:id="@+id/detail_type_text_view"
                    style="@style/TextAppearance.Customer.Detail.Value"
                    android:text="@{customer.itemType}"
                    app:layout_constraintStart_toStartOf="@id/detail_type_tag_text_view"
                    app:layout_constraintTop_toBottomOf="@id/detail_type_tag_text_view"
                    tools:text="Blouse" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>